name:               backdoor-re
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , filepath == 1.4.2.*
                  , listsafe == 0.1.0.*
                  , pandoc-citeproc == 0.14.8.*
                  , pandoc-types == 1.17.5.*
                  , split == 0.2.3.*
  ghc-options:      -threaded
  default-language: Haskell2010
